Added opendap target to build.xml for integration woth downstream Dcker tasks

--- a/build.xml
+++ b/build.xml
@@ -669,6 +669,7 @@
     <!-- == == == == == == == == == == == == == == == == == == == == == == -->
     <!-- == == == == == == == == == == == == == == == == == == == == == == -->
 
+    <target name="opendap" depends="server" />
     <target
             name="server"
             depends="clean,compile"
