simplifing the ant_convert_build.gradle file

--- a/ant_convert_build.gradle
+++ b/ant_convert_build.gradle
@@ -109,14 +109,14 @@ project.ext {
     // distribution_resources_dir = "${project.resources_dir}/distribution"
 
     // Build Directories
-    build_dir = "${buildDir}"
-    build_classes = "${project.build_dir}/classes"
-    build_docs = "${project.build_dir}/docs"
-    build_dist = "${project.build_dir}/dist"
-    build_lib = "${project.build_dir}/lib"
-    build_run = "${project.build_dir}/run"
-    build_src = "${project.build_dir}/src"
-    build_resources = "${project.build_dir}/resources"
+    //build_dir = "${buildDir}"
+    build_classes = "${buildDir}/classes"
+    build_docs = "${buildDir}/docs"
+    build_dist = "${buildDir}/dist"
+    build_lib = "${buildDir}/lib"
+    build_run = "${buildDir}/run"
+    build_src = "${buildDir}/src"
+    build_resources = "${buildDir}/resources"
 
     hyrax_resources_dir = "${project.resources_dir}/hyrax"
     ngap_resources_dir = "${project.resources_dir}/ngap"
@@ -137,7 +137,10 @@ task init_dir {
 //        mkdir "${project.'build_docs'}"
 //        mkdir "${project.'build_run'}"
     }
+
 }
+
+
 
 task copyResources(type: Copy) {
     description "Copy from original resources."
@@ -165,7 +168,7 @@ task copyResources(type: Copy) {
     into("src_gradle/main/webapp")
 }
 
-task copySources(type: Copy) {
+task copySources(){
     description "Copy original source code."
     from("src") {
         // include all the java files
@@ -187,6 +190,20 @@ task copySources(type: Copy) {
     }
     into("src_gradle/main/java")
 }
+
+/*
+task copyFilter(type: Copy){
+    from "bean.xml"
+    into ("$buildDir/beans")
+    def myProps = new Properties()
+    file("my.properties").withInputStream{
+        myProps.load(it);
+    }
+    filter(org.apache.tools.ant.filters.ReplaceTokens, tokens: myProps)
+}
+
+copyFilter.shouldRunAfter copySources
+*/
 
 task PreProcessSourceCode(dependsOn: ['clean', 'init_dir', 'copySources', 'copyResources']) {
     description = "Moves selected source code from the development tree into the build/src directory. " +
