--- a/build.gradle
+++ b/build.gradle
@@ -39,16 +39,18 @@ repositories {
     // For just about everything except...
     mavenCentral()
     // For: org.clojars.pjt and org.jdom
-    jcenter()
+    // jcenter()
     // For: net.sf.saxon
     maven {
         url 'https://repo.enonic.com/public'
-    }
+        }
+    maven { url 'https://clojars.org/repo/' }
     // I cannot get the above 'enonic' repo to work and cannot find saxon 9.1.0.8
     // anywhere. But we have 9.1.0.5 locally. jhrg 9/8/21
     flatDir {
         dirs 'gralde_local_repo'
     }
+
 }
 
 ext {
@@ -143,6 +145,7 @@ dependencies {
     providedCompile group: 'org.apache.tomcat', name: 'catalina', version: '6.0.53'
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
+    providedCompile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
 
     // ---- NGAP libraries -----
     implementation group: 'com.amazonaws', name: 'elasticache-java-cluster-client', version: '1.1.2'
