--- a/build.gradle
+++ b/build.gradle
@@ -138,7 +138,12 @@ dependencies {
 
     implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.1.11'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
+
+
+    //annottaonProcessor 'org.tuckey:urlrewritefilter:3.2.0'
+    //hold the line above to replace the line below for upgrade to gradle 4.6, SBL 9.13.21
     implementation group: 'org.tuckey', name: 'urlrewritefilter', version: '3.2.0'
+
     implementation group: 'org.owasp.encoder', name: 'encoder-jsp', version: '1.2.2'
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     implementation group: 'xalan', name: 'xalan', version: '2.7.2'
@@ -147,6 +152,8 @@ dependencies {
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
     providedCompile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
+    compile group: 'org.daisy.libs', name: 'saxon-he', version: '9.5.1.5-1'
+
 
     // ---- NGAP libraries -----
     implementation group: 'com.amazonaws', name: 'elasticache-java-cluster-client', version: '1.1.2'
