--- a/.travis.yml
+++ b/.travis.yml
@@ -76,6 +76,9 @@ jobs:
     - jdk: openjdk8
       name: "jdk8"
       script: ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
+    - jdk: openjdk7
+      name: "gradle jdk7"
+      script: gradle war 
 
     - stage: test
       name: "jdk7"
