--- a/build.gradle
+++ b/build.gradle
@@ -172,6 +172,10 @@ dependencies {
 
 // Substitute the version information before compilation
 compileJava {
+    doFirst {
+    	println 'HYRAX_VERSION: ' + project.HYRAX_VERSION
+    }
+    
     dependsOn 'substituteVersionInfo'
 }
 
