--- a/.travis.yml
+++ b/.travis.yml
@@ -76,12 +76,12 @@ jobs:
     - jdk: openjdk8
       name: "jdk8"
       script: ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
-    - jdk: openjdk7
-      name: "gradle jdk7"
+    - jdk: openjdk8
+      name: "gradle jdk8"
       script:
-      - gradle --version
-      - gradle tasks
-      - gradle war 
+      - ./gradlew --version
+      - ./gradlew tasks
+      - ./gradlew war 
 
     - stage: test
       name: "jdk7"
