--- a/.travis.yml
+++ b/.travis.yml
@@ -64,6 +64,16 @@ stages:
   - name: hyrax-docker-trigger
     if:  branch = master AND NOT type = pull_request
 
+# caching for gradle
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+
 jobs:
   include:
     - stage: build
@@ -76,6 +86,12 @@ jobs:
     - jdk: openjdk8
       name: "jdk8"
       script: ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
+    - jdk: openjdk7
+      name: "gradle jdk7"
+      script:
+      - ./gradlew --version
+      - ./gradlew tasks
+      - ./gradlew war 
     - jdk: openjdk8
       name: "gradle jdk8"
       script:
